src/assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply box-border;
    /* @apply border border-gray-300; */
  }

  body {
    @apply text-base leading-relaxed text-obsidian;
  }

  /* Headings */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply mt-0;
  }

  h1,
  .text-h1 {
    @apply text-5xl font-bold leading-none md:leading-tight mb-6 md:mb-12 xl:mb-14 2xl:mb-16 md:text-6xl lg:text-7xl;
  }

  h2,
  .text-h2 {
    @apply text-4xl font-bold mb-5 md:text-5xl lg:text-6xl leading-tight;
  }

  h3,
  .text-h3 {
    @apply text-3xl font-bold mb-4 md:text-4xl lg:text-5xl lg:leading-tight;
  }

  h4,
  .text-4 {
    @apply text-2xl md:text-3xl lg:text-4xl font-bold leading-snug lg:leading-tight mb-4;
  }
  h5,
  .text-h5 {
    @apply text-xl md:text-2xl lg:text-3xl font-bold leading-relaxed mb-3;
  }

  h6,
  .text-h6 {
    @apply text-lg md:text-xl lg:text-2xl font-bold leading-snug mb-3;
  }

  p {
    @apply mb-7;
  }

  /* Lists */
  ul {
    @apply list-disc pl-6 mb-5;
  }

  ol {
    @apply list-decimal pl-6 mb-5;
  }

  li {
    @apply mb-2;
  }

  small {
    @apply text-sm mb-4;
  }

  em {
    @apply italic;
  }

  strong {
    @apply font-bold;
  }

  a {
    @apply underline font-semibold hover:text-obsidian-500 active:no-underline;
  }

  table {
    @apply border-collapse;
  }

  td,
  th {
    @apply p-2;
  }

  th {
    @apply bg-obsidian-200;
  }

  td {
    @apply border border-obsidian text-center;
  }

  table tr:first-child td {
    border-top: 0;
  }
  table tr td:first-child {
    border-left: 0;
  }
  table tr:last-child td {
    border-bottom: 0;
  }
  table tr td:last-child {
    border-right: 0;
  }

  figcaption,
  caption {
    @apply mt-8 text-center;
  }
  figcaption span,
  caption {
    @apply bg-cream-300;
  }
}

@layer components {
  /* Hero Area Begins */
  .hero {
    @apply mx-auto
      pb-12 md:pb-24
      min-h-90vh
      xl:max-w-screen-2xl
      md:mb-40 xl:mb-60;
  }

  .hero h1,
  .hero .text-h1 {
    @apply font-black leading-none mb-8 sm:mb-4;
    font-size: clamp(2.8rem, 6.5vw + 1rem, 7rem);
  }

  .hero .top-line {
    @apply text-xl sm:text-2xl lg:text-3xl xl:text-4xl;
  }

  .hero p {
    @apply mb-12 lg:mb-16;
  }
  /* Hero Area Ends */

  .button {
    @apply no-underline relative bg-obsidian text-cream rounded-full w-full sm:w-auto text-center sm:text-left transition-colors duration-300 hover:bg-obsidian-600 hover:shadow-md-flat-r hover:shadow-obsidian;
  }

  @media not all and (pointer: coarse) {
    .button:hover {
      @apply text-cream;
    }

    .button::before {
      @apply absolute inset-0 rounded-full border-4 border-transparent transition-all duration-300;
      content: "";
    }

    .button:hover::before {
      @apply border-obsidian;
    }

    .button:hover,
    .button {
      transition: box-shadow 0.3s ease-in-out;
    }
  }

  .button.button-large {
    @apply sm:text-lg font-medium px-10 py-4;
  }

  .button.button-small {
    @apply text-sm font-medium px-8 py-3;
  }

  /* Windows Begin */
  .window-md {
    @apply rounded-xl shadow-obsidian shadow-2xl-flat-r overflow-hidden;
  }

  .window-sm {
    @apply rounded-md shadow-obsidian shadow-lg-flat-r overflow-hidden;
  }

  .window-md.border {
    @apply border-8 border-obsidian;
  }

  .window-md.window-md-margins {
    @apply p-4 lg:p-6;
  }
  /* Windows End */

  /* Contact Begins */
  .internal .contact {
    @apply bg-lime pt-12;
  }

  .home .contact {
    @apply pt-36
    sm:pt-16
      lg:pt-36
      2xl:pt-48;
  }

  .contact-button {
    @apply rounded-xl border-6 px-6 py-4 mb-8 border-cream shadow-cream transition-colors duration-300 hover:text-obsidian-400 hover:bg-lime-300 overflow-hidden;
    box-shadow: 8px 8px 0 #fff6ee;
  }

  .contact-button h5 {
    @apply m-0 max-md:text-3xl;
  }

  /* Contact Ends */

  /* Work Cards Begin */
  .card {
    @apply bg-cream max-sm:first:ml-5 max-sm:last:mr-8 max-sm:flex-shrink-0 max-sm:w-10/12 max-sm:max-w-md col-span-12 grid grid-cols-12 gap-x-6;
    @apply rotate-0 transition duration-500 ease-out;
  }

  @media not all and (pointer: coarse) {
    .card:hover {
      @apply odd:sm:rotate-[1.5deg] even:sm:-rotate-[1.5deg] transition duration-300 ease-in-out;
    }
  }

  .card > .card-illustration {
    @apply bg-purple-300 col-span-12 sm:col-span-4 lg:col-span-5 min-h-40 max-sm:h-52 bg-top lg:bg-center bg-no-repeat bg-cover;
  }

  .card > .card-contents {
    @apply max-sm:ml-4 mr-4 lg:mr-6 my-4 lg:my-6 col-span-12 sm:col-span-8 lg:col-span-7 sm:pt-0 flex flex-col items-start justify-start;
  }

  .card > .card-contents .category {
    @apply text-sm uppercase font-bold;
  }

  .card > .card-contents h5 {
    @apply mt-0 max-sm:text-xl max-sm:leading-tight capitalize;
  }

  .card p {
    @apply text-sm leading-normal lg:text-base mb-4;
  }

  .card > .card-contents .button {
    @apply self-start mt-4 md:mt-6;
  }
  /* Work Cards End */

  /* Brands Begins */
  .brands {
    @apply px-6 py-12 md:px-8 md:py-14 xl:px-10 xl:py-16 grid gap-4 md:gap-14 grid-cols-2 sm:grid-cols-3 md:grid-cols-5 xl:grid-cols-5;
  }

  .brands-logo {
    @apply h-14 md:h-16 lg:h-20 max-w-4/6 md:max-w-5/6 object-contain mx-auto;
  }
  /* Brands End */

  /* Services Begins */
  .services h5 {
    @apply max-md:text-2xl;
  }

  .services p {
    @apply mb-0;
  }
  /* Services Ends */

  /* Testimonials Begins */
  .testimonial-container {
    @apply flex gap-10 px-5 md:px-20 pt-4 pb-8 overflow-x-scroll;
  }

  .testimonial-card {
    @apply flex flex-col flex-shrink-0 flex-grow-0 w-[22rem] lg:w-[25rem] justify-center items-center space-y-4 lg:space-y-8;
    @apply rounded-lg px-4 py-6 shadow-md-flat-r shadow-lime border-4 border-lime bg-cream;
    @apply odd:rotate-1 even:-rotate-1;
  }

  .testimonial-card blockquote {
    @apply relative block px-8 text-center text-sm;
  }

  .testimonial-card blockquote:before,
  .testimonial-card blockquote:after {
    @apply absolute text-6xl font-bold text-lime-400;
  }

  .testimonial-card blockquote:before {
    content: open-quote;
    @apply leading-[0] top-[.5rem] left-0;
  }

  .testimonial-card blockquote:after {
    content: close-quote;
    @apply right-0 align-text-top leading-none;
  }

  .testimonial-card img {
    @apply w-32 aspect-square rounded-full border-obsidian-200;
  }

  .testimonial-card cite {
    @apply text-center text-sm lg:text-base;
  }

  .testimonial-card cite::before {
    content: "-- ";
  }

  /* Testimonials Ends */

  /* Contact Begins */
  .contact-social {
    @apply list-none m-0 p-0;
  }
  /* Contact Ends */

  /* 
  ==========
  Nav Begins
  ==========
  */

  /* Top Nav */
  .nav a {
    @apply py-4 md:py-6 mx-4 last:mx-0;
  }

  .nav a.current {
    @apply border-b-obsidian md:border-b-2 font-black underline md:no-underline;
  }

  .internal {
    /* Adds fixed color background for internal pages */
    @apply bg-cream;
  }

  .internal .nav {
    @apply bg-lavender;
  }
  /* Top Nav Ends */

  /* Footer Begins */
  .footer {
    @apply pt-0
    pb-8 lg:pb-10 2xl:pb-24 
    grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5 
    lg:text-lg 
    leading-loose;
  }

  .internal .footer-container {
    @apply bg-lime;
  }

  .footer a,
  .nav a {
    @apply no-underline;
  }

  .footer a:hover,
  .nav a:hover {
    @apply transition-colors duration-200 text-cream font-bold;
    transition: font-weight 0.3 ease-in-out;
  }

  footer ul {
    @apply list-none m-0 p-0;
  }
  /* Footer Ends */

  /* 
  ================
  Begin Case Study
  ================
  */

  .case-header {
    /* The entire header */
    @apply pb-24 min-h-[32rem] lg:min-h-[800px] max-h-50vh lg:max-h-80vh;
    @apply bg-[url:var(--image-url)] bg-[position:center_bottom] md:bg-[position:center_top] xl:bg-[position:center_center] bg-fixed bg-cover bg-no-repeat;
  }

  @media (pointer: coarse) and (max-width: 640px) {
    .case-header {
      background-attachment: initial !important;
    }
  }

  .case-header-titlebox {
    /* Box with headline & gradient */
    @apply pt-8 pb-40 xl:pb-44 2xl:max-h-[40rem];
    @apply bg-[linear-gradient(355deg,_rgba(198,194,240,0)_10rem,_rgba(198,194,242,.9)_10rem,_rgba(198,194,242,.9)_100%),_linear-gradient(_rgb(198,194,242),rgba(198,194,242,0)_30%)];
  }

  .case-header h6 {
    @apply mb-2 uppercase;
  }

  .case-header h3 {
    @apply mt-0 lg:text-6xl xl:text-[clamp(3.75rem,3.75rem+1vw,5rem)] lg:leading-tight xl:leading-[1.125] capitalize;
  }

  .case-summary {
    @apply mx-auto 
    py-8
    sm:px-4
    grid sm:grid-cols-[1fr_2fr] sm:gap-8
    text-sm;
  }

  .case-summary h6 {
  }

  .case-summary ul {
    @apply pl-0 list-none md:list-disc;
  }

  .case-summary li {
    @apply list-inside inline-block px-4 py-1 bg-slate-200 rounded-xl font-bold;
  }

  .reading > p,
  .reading > ul {
    @apply mb-20;
  }

  /* Illustration Layouts */
  .case .illustration {
    @apply my-16 md:my-24;
  }

  .case .illustration-sm-lg-sm {
    @apply grid md:grid-cols-3 lg:grid-cols-[1.3fr,_2.4fr,_1.3fr] xl:grid-cols-[1fr,2fr,1fr];
  }

  .case .illustration-sm-lg {
    @apply grid md:grid-cols-[1fr,_2fr];
  }

  /* 
  ================
  End Case Study
  ================
  */
}

@layer utilities {
  .columns {
    @apply grid grid-cols-1 sm:grid-cols-2 gap-12;
  }

  .columns.columns-third {
    @apply lg:grid-cols-[1fr_2fr];
  }

  /* Sets default margins for site sections/footers/etc */
  .contain-wide {
    @apply xl:max-w-screen-2xl mx-auto;
  }

  .contain-medium {
    @apply lg:max-w-screen-xl mx-auto;
  }

  .contain-narrow {
    @apply lg:max-w-screen-lg mx-auto;
  }

  .margins-x-narrow {
    @apply px-5 md:px-8;
  }

  .margins-x-medium {
    @apply px-5 md:px-12;
  }

  .margins-x-wide {
    @apply px-5
      md:px-20;
  }

  .margins-y {
    @apply pt-36
      sm:pt-16
      lg:pt-36
      2xl:pt-48
    pb-8
      lg:pb-10
      2xl:pb-24;
  }

  .pic-tall {
    @apply mt-10 sm:mt-0 lg:-mt-60 w-9/12 md:w-10/12 lg:w-9/12 xl:w-3/5 h-fit;
  }

  .pic-tall img {
    @apply w-full h-auto;
  }

  .p-bigger {
    @apply text-lg md:text-xl lg:text-2xl lg:leading-normal mb-6 md:mb-8 lg:mb-10;
  }

  .p-smaller {
    @apply text-sm lg:text-base mb-4;
  }

  .disabled {
    @apply opacity-25;
  }

  .last-flat {
    @apply last:mb-0;
  }

  .shadow-up-2xl {
    box-shadow: 0 -25px 30px rgb(0 0 0 / 0.15);
  }
}

